fix footer top gap

--- a/style.css
+++ b/style.css
@@ -65,5 +65,5 @@ code {
     display: block;
     width: 100%;
     text-align: center;
-    top: 5px;
+    padding-top: 5px;
 }
